--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "This portal is one of the digital project initiatives to aid MARA London to manage its resources. In line with the digitalisation agenda, this project would transform the work processes and make them more efficient than ever.",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "bcrypt": "^4.0.1",
+    "body-parser": "^1.19.0",
+    "cookie-session": "^1.4.0",
+    "express": "^4.17.1",
+    "nodemailer": "^6.4.8",
+    "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
