Update aws config

--- a/routes/aws/config.json
+++ b/routes/aws/config.json
@@ -1,5 +1,5 @@
 {
-  "accessKeyId": "AKIAI3SXR2V73GFK5O7Q",
-  "secretAccessKey": "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",
+  "accessKeyId": "AKIAJ5ACSOM6SD3RMSDA",
+  "secretAccessKey": "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",
   "region": "eu-west-2"
 }
