remove some strings

--- a/routes/aws/config.json
+++ b/routes/aws/config.json
@@ -1,5 +1,5 @@
 {
-  "accessKeyId": "AKIAJ5ACSOM6SD3RMSDA",
-  "secretAccessKey": "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",
+  "accessKeyId": "aaa",
+  "secretAccessKey": "aaa",
   "region": "eu-west-2"
 }
