--- a/routes/aws/config.json
+++ b/routes/aws/config.json
@@ -1,5 +1,5 @@
 {
-  "accessKeyId": "aaa",
-  "secretAccessKey": "aaa",
+  "accessKeyId": "AKIAUVY5GTUXXRYQCBXO",
+  "secretAccessKey": "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",
   "region": "eu-west-2"
 }
